updated api and ui
